[gd_scene load_steps=4 format=3 uid="uid://bk777cogqbox6"]

[ext_resource type="Script" path="res://game/objects/object_card.gd" id="1_wu660"]
[ext_resource type="Resource" uid="uid://7c20qd1jbga4" path="res://game/objects/card_resources/none_card.tres" id="2_yxyne"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wihli"]
size = Vector2(26, 30)

[node name="ObjectCard" type="Node2D"]
visible = false
position = Vector2(115, 55)
script = ExtResource("1_wu660")
card_properties = ExtResource("2_yxyne")

[node name="ObjectSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.05, 0.05)

[node name="CardArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardArea"]
position = Vector2(0, 7.62939e-06)
shape = SubResource("RectangleShape2D_wihli")
one_way_collision_margin = 5.0
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[connection signal="body_entered" from="CardArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="CardArea" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="CardArea" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="CardArea" to="." method="_on_area_2d_mouse_exited"]
